fixed overflow

--- a/public/style/board.css
+++ b/public/style/board.css
@@ -4,6 +4,7 @@ html {
 body {
     background-color: rgb(20, 20, 20);
     transform: scale(1) rotateX(5deg);
+    overflow: hidden;
 }
 /* WRAPPER */
 .wrapper {
